--- a/kernel/default/kernel/TODO
+++ b/kernel/default/kernel/TODO
@@ -4,9 +4,9 @@ TODO for 2011 kernel
 (-) SCSI HPSA SAS driver enabled in config, try it on the servers
 (-) ATH3K bt firmware
 (+) Grab lirc from staging, sync from fedora
+(+) Sync AuFS from Ubuntu
 (/50) Toshiba BT rfkill driver enabled, check omnibook
 
-(-) Sync AuFS from Ubuntu
 (?) Grab newer NFS4ACL patches from suse
 (/50) Enable TuxOnIce
 
