--- a/multimedia/sound/clementine/files/tr.po
+++ b/multimedia/sound/clementine/files/tr.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: clementine\n"
 "Report-Msgid-Bugs-To: H. İbrahim Güngör <ibrahim@pardus.org.tr>\n"
 "POT-Creation-Date: 2010-09-08 17:03+0000\n"
-"PO-Revision-Date: 2010-09-28 12:09+0300\n"
+"PO-Revision-Date: 2010-10-05 23:41+0300\n"
 "Last-Translator: zeugma <Unknown>\n"
 "Language-Team: Turkish <tr@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -1938,7 +1938,7 @@ msgstr "Görüntüleme Ayarları"
 
 #, qt-format
 msgid "Volume %1%"
-msgstr "Hacim %1%"
+msgstr "Ses %1%"
 
 msgid "Volume name"
 msgstr "Hacim adı"
