--- a/programming/language/java/tomcat-servlet-api/pspec.xml
+++ b/programming/language/java/tomcat-servlet-api/pspec.xml
@@ -10,7 +10,8 @@
         </Packager>
         <License>Apache-2.0</License>
         <IsA>library</IsA>
-        <Summary>Java Servlet Api Reference Implementation</Summary>
+        <Summary>Java Servlet API Reference Implementation</Summary>
+        <Description>tomcat-servlet-api contains Tomcat's Servlet API 2.5/JSP API 2.1 implementation.</Description>
         <Archive sha1sum="2d86ebe066d34d850bfea37b565dfe0d92faf8f9" type="targz">mirrors://apache/tomcat/tomcat-5/v5.5.31/src/apache-tomcat-5.5.31-src.tar.gz</Archive>
         <BuildDependencies>
             <Dependency>sun-jdk</Dependency>
@@ -30,6 +31,13 @@
     </Package>
 
     <History>
+        <Update release="5">
+            <Date>2010-10-07</Date>
+            <Version>5.5.31</Version>
+            <Comment>Add description.</Comment>
+            <Name>Ozan Çağlayan</Name>
+            <Email>ozan@pardus.org.tr</Email>
+        </Update>
         <Update release="4">
             <Date>2010-09-17</Date>
             <Version>5.5.31</Version>
