--- a/programming/language/python/geoip-python/pspec.xml
+++ b/programming/language/python/geoip-python/pspec.xml
@@ -11,6 +11,7 @@
         <License>GPLv2</License>
         <IsA>library</IsA>
         <Summary>GeoIP Python API</Summary>
+        <Description>geoip-python contains Python bindings for the GeoIP library.</Description>
         <Archive sha1sum="53db51c86cff1c0106cbaa02ad32bd589a150bfc"  type="targz">http://www.maxmind.com/download/geoip/api/python/GeoIP-Python-1.2.4.tar.gz</Archive>
         <BuildDependencies>
             <Dependency>geoip</Dependency>
