--- a/programming/language/perl/perl-DateTime-TimeZone/pspec.xml
+++ b/programming/language/perl/perl-DateTime-TimeZone/pspec.xml
@@ -12,6 +12,7 @@
         <License>GPLv2</License>
         <IsA>library</IsA>
         <Summary>Time zone object base class and factory for Perl</Summary>
+        <Description>perl-DateTime-TimeZone provides timezone object base class and factory for Perl.</Description>
         <Archive sha1sum="69783e42d0d8c2effc8817b9e597737635c49ef7" type="targz">mirrors://cpan/authors/id/D/DR/DROLSKY/DateTime-TimeZone-1.22.tar.gz</Archive>
         <BuildDependencies>
             <Dependency version="5.12.1">perl</Dependency>
