--- a/programming/language/perl/perl-Clone/pspec.xml
+++ b/programming/language/perl/perl-Clone/pspec.xml
@@ -10,7 +10,8 @@
         </Packager>
         <License>Artistic</License>
         <IsA>library</IsA>
-        <Summary>Recursively copy Perl datatypes</Summary>
+        <Summary>Recursively copy Perl data types</Summary>
+        <Description>perl-Clone recursively copies Perl data types.</Description>
         <Archive sha1sum="100c69b3091213336f9abe3060286938786a7b32" type="targz">mirrors://cpan/authors/id/R/RD/RDF/Clone-0.31.tar.gz</Archive>
         <BuildDependencies>
             <Dependency version="5.12.1">perl</Dependency>
