--- a/programming/language/python/python-edje/pspec.xml
+++ b/programming/language/python/python-edje/pspec.xml
@@ -12,33 +12,58 @@
         <IsA>library</IsA>
         <Summary>Edje Python binding</Summary>
         <Description>python-edje is the Python binding of Edje layout library.</Description>
-        <Archive sha1sum="22da7216d89be2d2e62c726931d06dd3befc3852" type="tarbz2">http://cekirdek.pardus.org.tr/~ibrahim/dist/efl/python-edje-0.5.0_49588.tar.bz2</Archive>
+        <!--<Archive sha1sum="22da7216d89be2d2e62c726931d06dd3befc3852" type="tarbz2">http://cekirdek.pardus.org.tr/~ibrahim/dist/efl/python-edje-0.5.0_49588.tar.bz2</Archive>-->
+        <Archive sha1sum="a6642472f6739f65c45e1e079f5bf519f3aa8c77" type="tarbz2">http://download.enlightenment.org/releases/BINDINGS/python/python-edje-0.7.3.tar.bz2</Archive>
         <BuildDependencies>
-            <Dependency>pyrex</Dependency>
-            <Dependency>cython</Dependency>
-            <Dependency versionFrom="0.9.9.49539">eina-devel</Dependency>
-            <Dependency versionFrom="0.9.9.49539">ecore-devel</Dependency>
-            <Dependency versionFrom="0.9.9.49539">evas-devel</Dependency>
-            <Dependency versionFrom="0.9.9.49539">edje-devel</Dependency>
-            <Dependency versionFrom="0.5.0_49588">python-evas-devel</Dependency>
+            <Dependency versionFrom="1.0.0_beta1">eina-devel</Dependency>
+            <Dependency versionFrom="1.4.0_beta1">eet-devel</Dependency>
+            <Dependency versionFrom="1.0.0_beta1">ecore-devel</Dependency>
+            <Dependency versionFrom="1.0.0_beta1">evas-devel</Dependency>
+            <Dependency versionFrom="1.0.0_beta1">edje-devel</Dependency>
+            <Dependency versionFrom="1.0.0_beta1">embryo-devel</Dependency>
+            <Dependency versionFrom="0.7.3">python-evas-devel</Dependency>
         </BuildDependencies>
     </Source>
 
     <Package>
         <Name>python-edje</Name>
         <RuntimeDependencies>
-            <Dependency versionFrom="0.9.9.49539">edje</Dependency>
-            <Dependency versionFrom="0.5.0_49588">python-evas</Dependency>
-            <Dependency versionFrom="0.5.0_49588">python-ecore</Dependency>
-            <Dependency versionFrom="0.5.0_49588">python-e_dbus</Dependency>
+            <Dependency versionFrom="1.0.0_beta1">eina</Dependency>
+            <Dependency versionFrom="1.4.0_beta1">eet</Dependency>
+            <Dependency versionFrom="1.0.0_beta1">ecore</Dependency>
+            <Dependency versionFrom="1.0.0_beta1">edje</Dependency>
+            <Dependency versionFrom="1.0.0_beta1">embryo</Dependency>
+            <Dependency versionFrom="0.7.3">python-evas</Dependency>
+            <Dependency versionFrom="0.7.3">python-ecore</Dependency>
+            <Dependency versionFrom="0.7.3">python-e_dbus</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="library">/usr/lib</Path>
+            <Path fileType="data">/usr/share/python-edje</Path>
             <Path fileType="doc">/usr/share/doc</Path>
         </Files>
     </Package>
 
+    <Package>
+        <Name>python-edje-devel</Name>
+        <Summary>Development files for python-edje</Summary>
+        <RuntimeDependencies>
+            <Dependency release="2">python-edje</Dependency>
+        </RuntimeDependencies>
+        <Files>
+            <Path fileType="header">/usr/include</Path>
+            <Path fileType="data">/usr/lib/pkgconfig</Path>
+        </Files>
+    </Package>
+
     <History>
+        <Update release="2">
+            <Date>2010-10-03</Date>
+            <Version>0.7.3</Version>
+            <Comment>Version bump.</Comment>
+            <Name>H. İbrahim Güngör</Name>
+            <Email>ibrahim@pardus.org.tr</Email>
+        </Update>
         <Update release="1">
             <Date>2010-06-09</Date>
             <Version>0.5.0_49588</Version>
