--- a/programming/language/python/python-edje/translations.xml
+++ b/programming/language/python/python-edje/translations.xml
@@ -5,4 +5,9 @@
         <Summary xml:lang="tr">Python Edje bağlayıcısı</Summary>
         <Description xml:lang="tr">python-edje Edje yerleşim kitaplığının Python bağlayıcısıdır.</Description>
     </Source>
+
+    <Package>
+        <Name>python-edje-devel</Name>
+        <Summary xml:lang="tr">python-edje için geliştirme dosyaları</Summary>
+    </Package>
 </PISI>
