--- a/programming/language/python/cython/pspec.xml
+++ b/programming/language/python/cython/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>C extensions for the Python</Summary>
         <Description>Cython is a language that makes writing C extensions for the Python language as easy as Python itself.</Description>
-        <Archive sha1sum="a56859f0b17e9db15da6f292f6a79ac47195e5f7" type="targz">http://www.cython.org/release/Cython-0.12.1.tar.gz</Archive>
+        <Archive sha1sum="8f17947fa75c03cabe11a8a5a19dc74e27f0d1e2" type="targz">http://www.cython.org/release/Cython-0.13.tar.gz</Archive>
     </Source>
 
     <Package>
@@ -26,6 +26,13 @@
     </Package>
 
     <History>
+        <Update release="8">
+            <Date>2010-11-22</Date>
+            <Version>0.13</Version>
+            <Comment>Version bump.</Comment>
+            <Name>Gökmen Görgen</Name>
+            <Email>gkmngrgn@gmail.com</Email>
+        </Update>
         <Update release="7">
             <Date>2010-10-13</Date>
             <Version>0.12.1</Version>
