--- a/programming/language/python/pygtk/pspec.xml
+++ b/programming/language/python/pygtk/pspec.xml
@@ -2,7 +2,7 @@
 <!DOCTYPE PISI SYSTEM "http://www.pardus.org.tr/projeler/pisi/pisi-spec.dtd">
 <PISI>
     <Source>
-        <Name>pygtk</Name>
+        <Name>python-gtk</Name>
         <Homepage>http://www.pygtk.org</Homepage>
         <Packager>
             <Name>Gökmen Görgen</Name>
@@ -11,7 +11,7 @@
         <License>LGPLv2.1</License>
         <IsA>library</IsA>
         <Summary>GTK+ bindings for Python</Summary>
-        <Description>pygtk lets you to easily create programs with a graphical user interface using the Python programming language and GTK+ library.</Description>
+        <Description>python-gtk lets you to easily create programs with a graphical user interface using the Python programming language and GTK+ library.</Description>
         <Archive sha1sum="6a180d0c9ed19179662f51decb150b2c98cc9362" type="tarbz2">mirrors://gnome/pygtk/2.22/pygtk-2.22.0.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>cairo-devel</Dependency>
@@ -26,7 +26,7 @@
     </Source>
 
     <Package>
-        <Name>pygtk</Name>
+        <Name>python-gtk</Name>
         <RuntimeDependencies>
             <Dependency>cairo</Dependency>
             <Dependency>pango</Dependency>
@@ -37,6 +37,9 @@
             <Dependency>python-cairo</Dependency>
             <Dependency>python-numpy</Dependency>
         </RuntimeDependencies>
+        <Replaces>
+            <Package>pygtk</Package>
+        </Replaces>
         <Files>
             <Path fileType="library">/usr/lib</Path>
             <Path fileType="doc">/usr/share/doc</Path>
@@ -44,12 +47,15 @@
     </Package>
 
     <Package>
-        <Name>pygtk-demo</Name>
+        <Name>python-gtk-demo</Name>
         <IsA>app:gui</IsA>
-        <Summary>Demo applications for pygtk</Summary>
+        <Summary>Demo applications for python-gtk</Summary>
         <RuntimeDependencies>
-            <Dependency releaseFrom="11">pygtk</Dependency>
+            <Dependency releaseFrom="current">python-gtk</Dependency>
         </RuntimeDependencies>
+        <Replaces>
+            <Package>pygtk-demo</Package>
+        </Replaces>
         <Files>
             <Path fileType="executable">/usr/bin/pygtk-demo</Path>
             <Path fileType="library">/usr/lib/pygtk/2.0/pygtk-demo.py</Path>
@@ -58,24 +64,30 @@
     </Package>
 
     <Package>
-        <Name>pygtk-docs</Name>
+        <Name>python-gtk-docs</Name>
         <IsA>data:doc</IsA>
-        <Summary>Reference documents for pygtk</Summary>
+        <Summary>Reference documents for python-gtk</Summary>
         <RuntimeDependencies>
-            <Dependency releaseFrom="11">pygtk</Dependency>
+            <Dependency releaseFrom="current">python-gtk</Dependency>
         </RuntimeDependencies>
+        <Replaces>
+            <Package>pygtk-docs</Package>
+        </Replaces>
         <Files>
             <Path fileType="doc">/usr/share/gtk-doc</Path>
         </Files>
     </Package>
 
     <Package>
-        <Name>pygtk-devel</Name>
-        <Summary>Development files for pygtk</Summary>
+        <Name>python-gtk-devel</Name>
+        <Summary>Development files for python-gtk</Summary>
         <RuntimeDependencies>
-            <Dependency release="current">pygtk</Dependency>
+            <Dependency release="current">python-gtk</Dependency>
             <Dependency>python-pygobject-devel</Dependency>
         </RuntimeDependencies>
+        <Replaces>
+            <Package>pygtk-devel</Package>
+        </Replaces>
         <Files>
             <Path fileType="executable">/usr/bin/pygtk-codegen-2.0</Path>
             <Path fileType="header">/usr/include</Path>
@@ -85,6 +97,16 @@
     </Package>
 
     <History>
+        <Update release="15">
+            <Date>2010-11-27</Date>
+            <Version>2.22.0</Version>
+            <Comment>
+                * Rename package as python-gtk for Pardus 2011 policies.
+                * Fix dependency versions.
+            </Comment>
+            <Name>Gökmen Görgen</Name>
+            <Email>gkmngrgn@gmail.com</Email>
+        </Update>
         <Update release="14">
             <Date>2010-11-26</Date>
             <Version>2.22.0</Version>
