--- a/programming/language/python/pygtk/translations.xml
+++ b/programming/language/python/pygtk/translations.xml
@@ -1,24 +1,24 @@
 <?xml version="1.0" ?>
 <PISI>
     <Source>
-        <Name>pygtk</Name>
+        <Name>python-gtk</Name>
         <Summary xml:lang="tr">Python için GTK+ bağlayıcıları</Summary>
-        <Description xml:lang="tr">pygtk, Python programlama diliyle GTK+ kütüphanesini kullanarak, basit grafiksel kullanıcı arayüzü oluşturmanızı sağlar.</Description>
+        <Description xml:lang="tr">python-gtk, Python programlama diliyle GTK+ kütüphanesini kullanarak, basit grafiksel kullanıcı arayüzü oluşturmanızı sağlar.</Description>
         <Description xml:lang="fr">Bindings (liens) GTK+2 pour Python.</Description>
     </Source>
 
     <Package>
-        <Name>pygtk-demo</Name>
-        <Summary xml:lang="tr">pygtk için demo uygulamalar</Summary>
+        <Name>python-gtk-demo</Name>
+        <Summary xml:lang="tr">python-gtk için demo uygulamalar</Summary>
     </Package>
 
     <Package>
-        <Name>pygtk-docs</Name>
-        <Summary xml:lang="tr">pygtk için referans belgeleri</Summary>
+        <Name>python-gtk-docs</Name>
+        <Summary xml:lang="tr">python-gtk için referans belgeleri</Summary>
     </Package>
 
     <Package>
-        <Name>pygtk-devel</Name>
-        <Summary xml:lang="tr">pygtk için geliştirme dosyaları</Summary>
+        <Name>python-gtk-devel</Name>
+        <Summary xml:lang="tr">python-gtk için geliştirme dosyaları</Summary>
     </Package>
 </PISI>
