--- a/programming/language/python/notify-python/pspec.xml
+++ b/programming/language/python/notify-python/pspec.xml
@@ -15,7 +15,7 @@
         <Archive sha1sum="0e2b8525b1aabf0924c5efb53ced6aa429240ed0" type="targz">http://galago-project.org/files/releases/source/notify-python/notify-python-0.1.1.tar.gz</Archive>
         <BuildDependencies>
             <Dependency>libnotify-devel</Dependency>
-            <Dependency>pygtk-devel</Dependency>
+            <Dependency>python-gtk-devel</Dependency>
             <Dependency>gtk2-devel</Dependency>
         </BuildDependencies>
         <Patches>
@@ -27,7 +27,7 @@
         <Name>notify-python</Name>
         <RuntimeDependencies>
             <Dependency>libnotify</Dependency>
-            <Dependency>pygtk</Dependency>
+            <Dependency>python-gtk</Dependency>
             <Dependency>gtk2</Dependency>
         </RuntimeDependencies>
         <Files>
@@ -38,6 +38,13 @@
     </Package>
 
     <History>
+        <Update release="7">
+            <Date>2010-11-27</Date>
+            <Version>0.1.1</Version>
+            <Comment>Update package name of pygtk.</Comment>
+            <Name>Gökmen Görgen</Name>
+            <Email>gkmngrgn@gmail.com</Email>
+        </Update>
         <Update release="6">
             <Date>2010-10-13</Date>
             <Version>0.1.1</Version>
