--- a/programming/language/python/gnome-python/pspec.xml
+++ b/programming/language/python/gnome-python/pspec.xml
@@ -14,7 +14,7 @@
         <Description>Package of gnome-python contains various python bindings for the GNOME environment.</Description>
         <Archive sha1sum="de7e66aff141c4c64bc25cdb85193fab0899b983" type="tarbz2">mirrors://gnome/gnome-python/2.28/gnome-python-2.28.1.tar.bz2</Archive>
         <BuildDependencies>
-            <Dependency>pygtk-devel</Dependency>
+            <Dependency>python-gtk-devel</Dependency>
             <Dependency>libgnomeui-devel</Dependency>
             <Dependency>libgnomecanvas-devel</Dependency>
             <Dependency>gnome-vfs-devel</Dependency>
@@ -27,7 +27,7 @@
     <Package>
         <Name>gnome-python</Name>
         <RuntimeDependencies>
-            <Dependency>pygtk</Dependency>
+            <Dependency>python-gtk</Dependency>
             <Dependency>libgnomeui</Dependency>
             <Dependency>libgnomecanvas</Dependency>
             <Dependency>gnome-vfs</Dependency>
@@ -62,6 +62,13 @@
     </Package>
 
     <History>
+        <Update release="12">
+            <Date>2010-11-27</Date>
+            <Version>2.28.1</Version>
+            <Comment>Update package name of pygtk.</Comment>
+            <Name>Gökmen Görgen</Name>
+            <Email>gkmngrgn@gmail.com</Email>
+        </Update>
         <Update release="11">
             <Date>2010-10-13</Date>
             <Version>2.28.1</Version>
