--- a/programming/language/python/gst-python/pspec.xml
+++ b/programming/language/python/gst-python/pspec.xml
@@ -14,7 +14,7 @@
         <Description>gst-python is a Python frontend to GStreamer.</Description>
         <Archive sha1sum="0e8c8b004a4dadb525cea224bc32bc7b7d5bf2b1" type="tarbz2">http://gstreamer.freedesktop.org/src/gst-python/gst-python-0.10.19.tar.bz2</Archive>
         <BuildDependencies>
-            <Dependency>pygtk-devel</Dependency>
+            <Dependency>python-gtk-devel</Dependency>
             <Dependency>python-pygobject-devel</Dependency>
             <Dependency versionFrom="0.10.30">gstreamer-devel</Dependency>
             <Dependency versionFrom="0.10.30">gst-plugins-base-devel</Dependency>
@@ -27,7 +27,7 @@
     <Package>
         <Name>gst-python</Name>
         <RuntimeDependencies>
-            <Dependency>pygtk</Dependency>
+            <Dependency>python-gtk</Dependency>
             <Dependency>python-pygobject</Dependency>
             <Dependency versionFrom="0.10.30">gstreamer</Dependency>
             <Dependency versionFrom="0.10.30">gst-plugins-base</Dependency>
@@ -51,6 +51,13 @@
     </Package>
 
     <History>
+        <Update release="13">
+            <Date>2010-11-27</Date>
+            <Version>0.10.19</Version>
+            <Comment>Update package name of pygtk.</Comment>
+            <Name>Gökmen Görgen</Name>
+            <Email>gkmngrgn@gmail.com</Email>
+        </Update>
         <Update release="12">
             <Date>2010-10-13</Date>
             <Version>0.10.19</Version>
