--- a/programming/language/python/python-pygobject/pspec.xml
+++ b/programming/language/python/python-pygobject/pspec.xml
@@ -12,17 +12,17 @@
         <IsA>library</IsA>
         <Summary>Glib bindings for Python</Summary>
         <Description>pygobject is GLib's GObject library bindings for Python.</Description>
-        <Archive sha1sum="8017d5dba28278727501194d45310d3156937c70" type="tarbz2">mirrors://gnome/pygobject/2.21/pygobject-2.21.5.tar.bz2</Archive>
+        <Archive sha1sum="d091412760d44477e76ae995125c8fc5a15eae74" type="tarbz2">mirrors://gnome/pygobject/2.26/pygobject-2.26.0.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>cairo-devel</Dependency>
-            <Dependency>gobject-introspection-devel</Dependency>
+            <Dependency versionFrom="0.9.5">gobject-introspection-devel</Dependency>
             <Dependency>libffi-devel</Dependency>
         </BuildDependencies>
         <Patches>
             <Patch level="1">pygobject-2.16.1-fixdetection.patch</Patch>
             <Patch level="1">pygobject-2.15.4-fix-codegen-location.patch</Patch>
-            <Patch>pygobject-2.15.4-fix-format_error.diff</Patch>
             <!--
+            <Patch>pygobject-2.15.4-fix-format_error.diff</Patch>
             <Patch level="1">double_defsgen.patch</Patch>
             -->
         </Patches>
@@ -32,7 +32,7 @@
         <Name>python-pygobject</Name>
         <RuntimeDependencies>
             <Dependency>cairo</Dependency>
-            <Dependency>gobject-introspection</Dependency>
+            <Dependency versionFrom="0.9.5">gobject-introspection</Dependency>
             <Dependency>libffi</Dependency>
         </RuntimeDependencies>
         <Conflicts>
@@ -72,6 +72,15 @@
     </Package>
 
     <History>
+        <Update release="16">
+            <Date>2010-11-27</Date>
+            <Version>2.26.0</Version>
+            <Comment>
+                * Version bump.
+            </Comment>
+            <Name>Gökmen Görgen</Name>
+            <Email>gkmngrgn@gmail.com</Email>
+        </Update>
         <Update release="15">
             <Date>2010-10-13</Date>
             <Version>2.21.5</Version>
