--- a/programming/language/python/python-pygobject/pspec.xml
+++ b/programming/language/python/python-pygobject/pspec.xml
@@ -20,11 +20,6 @@
         </BuildDependencies>
         <Patches>
             <Patch level="1">pygobject-2.16.1-fixdetection.patch</Patch>
-            <Patch level="1">pygobject-2.15.4-fix-codegen-location.patch</Patch>
-            <!--
-            <Patch>pygobject-2.15.4-fix-format_error.diff</Patch>
-            <Patch level="1">double_defsgen.patch</Patch>
-            -->
         </Patches>
     </Source>
 
@@ -73,10 +68,11 @@
 
     <History>
         <Update release="16">
-            <Date>2010-11-27</Date>
+            <Date>2010-11-28</Date>
             <Version>2.26.0</Version>
             <Comment>
                 * Version bump.
+                * Remove unrequired patches.
             </Comment>
             <Name>Gökmen Görgen</Name>
             <Email>gkmngrgn@gmail.com</Email>
